1999-09-17  Anders Carlsson  <anders.carlsson@tordata.se>

	* gnome-i18n.c (gnome_i18n_init): Set LC_CTYPE to en_US if it isn't
	  already set. This prevents falling back to the "C" locale which
	  doesn't support 8-bit characters

Mon Sep 13 22:01:29 1999  George Lebl  <jirka@5z.com>

	* gnome-i18n.c: gnome_i18n_get_language_list now also tries to
	  figure out aliases by reading in alias files from some standard
	  locations

1999-09-08  Martin Baulig  <martin@home-of-linux.org>

	* gnome-triggers.h (GnomeTriggerType, _GnomeTriggerType):
	Use `typedef enum { ... } GnomeTriggerType' instead of
 	`typedef enum _GnomeTriggerType { ... } GnomeTriggerType'.

1999-09-01  Jacob Berkman  <jberkman@andrew.cmu.edu>

	* gnome-dentry.c (gnome_desktop_entry_load_flags_conditional): 
	default type to Directory for KDE dentries.  Unfortunately for
	directories, they do not specify the Type (at least for KDE 1.1.1)
	Also, look in the KDE_ICONDIR for KDE icons

	This fixes bug #2015

1999-08-31  Federico Mena Quintero  <federico@redhat.com>

	* gnome-metadata.c: Arrange order of #ifdef tests for db.

	* gnome-dump.c: Likewise.

1999-08-30  Federico Mena Quintero  <federico@redhat.com>

	* gnome-triggers.h: Make it build.

1999-08-29  Tom Tromey  <tromey@cygnus.com>

	* gnome-mime.c (mime_mutex): New global.
	(gnome_mime_type_or_default): Lock mutex.
	(gnome_mime_type_of_file): Removed redundant call to
	gnome_mime_type_from_magic.

1999-08-28  Tom Tromey  <tromey@cygnus.com>

	* gnome-metadata.c (metadata_list_nolock): New function.
	(gnome_metadata_list): Use it.
	(worker): Use it.
	(init): Don't re-check `database'.

	* gnome-metadata.c (database_mu): Now an ordinary static mutex.
	(TLOCK): Removed.
	(TUNLOCK): Likewise.
	(lock): Removed `thread' argument.
	(unlock): Likewise.
	(Various): All mutex locking now done around body of exported
	functions.

Sat Aug 28 10:33:28 1999  George Lebl  <jirka@5z.com>

	* gnome-dentry.c: fix warnings
